<resources>
    <string name="app_name">Give Me Your Hand</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="show_password">Show Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="sign_up_now">Sign Up Now</string>
    <string name="sign_up">Sign Up</string>
    <string name="full_name">Full name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="terms_condition">Agree All the Terms and Conditions.</string>

    <string name="log_out">Log out</string>
    <string name="exit">Exit</string>
    <string name="create_your_post">Create Your Post</string>
    <string name="enter_title">Enter Title</string>
    <string name="enter_content">Enter Content</string>
    <string name="enter_bank_account_optional">Enter Bank Account (Optional)</string>
    <string name="enter_contact_no_optional">Enter Contact No. (Optional)</string>
    <string name="select_image">Select Image</string>
    <string name="submit">Submit</string>
    <string name="no_image_selected">No image selected</string>
    <string name="click_to_select_image">Click to select image</string>
    <string name="place_a_comment">Place a Comment</string>
    <string name="user_profile">User Profile</string>
    <string name="email_address_lbl">Email Address:</string>
    <string name="phone_number_lbl">Phone Number:</string>
    <string name="update_profile">Update Profile</string>
    <string name="update_information">Update Information</string>
    <string name="change_password">Change Password</string>
    <string name="enter_location_optional">Enter Location (Optional)</string>
    <string name="comment_of_the_post">Comment of the post</string>
    <string name="Location_map">Location</string>
    <string name="name_of_the_user">Name of the User</string>
    <string name="date_of_post">Date of Post</string>
    <string name="title">Title</string>
    <string name="content">Content:</string>
    <string name="this_is_the_content">This is the Content</string>
    <string name="account_no">Account No:</string>
    <string name="this_is_the_bank_account_number">This is the bank account number</string>
    <string name="contact_no">Contact No:</string>
    <string name="this_is_the_contact_number">This is the contact Number</string>
    <string name="location">Location:</string>
    <string name="this_is_the_location">This is the Location</string>
    <string name="send">Send</string>
    <string name="like">Like</string>
    <string name="view_comment">View Comment</string>
    <string name="report">Report</string>
    <string name="give_me_your_hand">Give Me Your Hand</string>
    <string name="change_language">Change Language</string>
    <string name="home_page">Home Page</string>
    <string name="own_post">Own Post</string>
    <string name="post_new_activity">Post new Activity</string>
    <string name="settings">Settings</string>
    <string name="about_us">About Us</string>
    <string name="username">username</string>
    <string name="commented_on">commented On</string>
    <string name="date">Date:</string>
    <string name="comment_text_will_display_here">Comment Text will display here…</string>
    <string name="username_update">Username:</string>
    <string name="new_username">New Username</string>
    <string name="phone_number">Phone Number:</string>
    <string name="new_phone_number">New Phone Number</string>
    <string name="confirm">Confirm</string>
    <string name="comments">Comments:</string>
</resources>
