<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home_page" />
        <item
            android:id="@+id/new_post"
            android:icon="@drawable/ic_public_24dp"
            android:title="@string/post_new_activity" />
        <item
            android:id="@+id/own_post"
            android:icon="@drawable/ic_public_24dp"
            android:title="@string/own_post"/>
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_phone_black_24dp"
            android:title="@string/about_us" />
    </group>

    <item
                android:id="@+id/sign_out"
                android:icon="@drawable/ic_exit_to_app_24dp"
                android:title="@string/log_out" />
    <item
                android:id="@+id/exit_app"
                android:icon="@drawable/ic_exit_24dp"
                android:title="@string/exit" />

</menu>
