<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/profilePic"
            android:background="@drawable/ic_person_black_24dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_toEndOf="@id/profilePic"
            android:id="@+id/username"
            android:layout_marginStart="10dp"
            android:text="@string/name_of_the_user"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_below="@+id/username"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/profilePic"
            android:layout_marginStart="10dp"
            android:text="@string/date_of_post" />

        <ImageView
            android:id="@+id/first"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="60dp" />

        <ImageView
            android:id="@+id/second"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="60dp"
            android:layout_toEndOf="@+id/first" />

        <ImageView
            android:id="@+id/third"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="60dp"
            android:layout_toEndOf="@+id/second" />

        <TextView
            android:id="@+id/like"
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:layout_below="@+id/username"
            android:layout_alignParentEnd="true"
            android:drawableStart="@drawable/ic_like_24dp" />


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textDesc"
            android:textSize="38dp"
            android:text="@string/title"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/content"
            android:textSize="22dp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/content"
            android:textSize="20dp"
            android:text="@string/this_is_the_content"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/accNoLabel"
            android:text="@string/account_no"
            android:textSize="22dp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bank_acc"
            android:textSize="18dp"
            android:text="@string/this_is_the_bank_account_number"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/contactLabel"
            android:text="@string/contact_no"
            android:textSize="22dp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/contactNo"
            android:textSize="18dp"
            android:text="@string/this_is_the_contact_number"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/location_label"
            android:textSize="22dp"
            android:text="@string/location"/>

        <TextView
            android:id="@+id/location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/this_is_the_location"
            android:textColor="@color/colorAccent"
            android:textSize="18dp" />


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <EditText
                android:id="@+id/textComment"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/place_a_comment"
                android:inputType="textMultiLine"
                android:layoutDirection="rtl" />

            <Button
                android:id="@+id/comment_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/textComment"
                android:layoutDirection="rtl"
                android:text="@string/send" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_below="@+id/textComment"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/like_btn"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:drawableStart="@drawable/ic_like_24dp"
                    android:text="@string/like" />

                <Button
                    android:id="@+id/comment_btn"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/view_comment" />

                <Button
                    android:id="@+id/report_btn"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/report" />

            </LinearLayout>



        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@color/black"
            android:layout_marginTop="30dp" />


</LinearLayout>

</LinearLayout>