<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cyan"
    tools:context=".UploadPostFragment">


    <TextView
        android:id="@+id/post_header"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="45dp"
        android:layout_marginTop="10dp"
        android:text="@string/create_your_post"
        android:textColor="@color/colorAccent"
        android:textSize="36sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/post_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/post_header"
        android:layout_alignStart="@+id/post_header"
        android:layout_alignEnd="@+id/post_header"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/enter_title"
        android:inputType="textPersonName"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/post_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/post_title"
        android:layout_alignStart="@+id/post_title"
        android:layout_alignEnd="@+id/post_title"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/enter_content"
        android:inputType="textMultiLine"
        android:singleLine="false"
        android:textAlignment="viewStart"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/post_bank_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/post_content"
        android:layout_alignStart="@+id/post_content"
        android:layout_alignEnd="@+id/post_content"
        android:layout_marginTop="10dp"

        android:ems="10"
        android:hint="@string/enter_bank_account_optional"
        android:inputType="textPersonName"
        android:singleLine="false" />

    <EditText
        android:id="@+id/post_contact_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/post_bank_account"
        android:layout_alignStart="@+id/post_bank_account"
        android:layout_alignEnd="@+id/post_bank_account"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/enter_contact_no_optional"
        android:inputType="textPersonName" />

    <AutoCompleteTextView
        android:id="@+id/post_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/post_contact_no"
        android:layout_alignStart="@+id/post_contact_no"
        android:layout_alignEnd="@+id/post_contact_no"
        android:layout_marginTop="10dp"
        android:hint="@string/enter_location_optional"
        android:inputType="textMultiLine" />

    <LinearLayout
        android:id="@+id/image_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/post_location"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:contentDescription="@string/click_to_select_image"
            android:src="@drawable/ic_image_24dp" />

        <ImageView
            android:id="@+id/image2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/click_to_select_image"
            android:layout_weight="1"
            android:src="@drawable/ic_image_24dp" />

        <ImageView
            android:id="@+id/image3"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/click_to_select_image"
            android:layout_weight="1"
            android:src="@drawable/ic_image_24dp" />
    </LinearLayout>

    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image_layout"
        android:layout_alignEnd="@+id/post_contact_no"
        android:text="@string/submit"
        android:textAllCaps="false" />

    <ProgressBar
        android:id="@+id/create_post_loading_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="197dp"
        android:layout_height="165dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="150dp"
        android:visibility="gone" />


</RelativeLayout>